external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_therMAILx.h

 /**
  * @fn void therMAILx_ComputeConvection(int * ivector_in=nullptr, int ilength_in=0)
  * @brief compute elementary convection terms
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeConvection(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeConvection(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_WithoutRenumbering(void)
  * @brief skip renumbering of the unknowns using a rcc method 
  *
  * @cond PYDOC
  * python usage : therMAILx_WithoutRenumbering()
  * @endcond
  */
  extern "C" int therMAILx_WithoutRenumbering(void);
 /**
  * @fn void therMAILx_BandStorage(void)
  * @brief use band matrix 
  *
  * @cond PYDOC
  * python usage : therMAILx_BandStorage()
  * @endcond
  */
  extern "C" int therMAILx_BandStorage(void);
 /**
  * @fn void therMAILx_SparseStorage(void)
  * @brief use sparse matrix
  *
  * @cond PYDOC
  * python usage : therMAILx_SparseStorage()
  * @endcond
  */
  extern "C" int therMAILx_SparseStorage(void);
 /**
  * @fn void therMAILx_ExplodedStorage(void)
  * @brief use element by element matrix 
  *
  * @cond PYDOC
  * python usage : therMAILx_ExplodedStorage()
  * @endcond
  */
  extern "C" int therMAILx_ExplodedStorage(void);
 /**
  * @fn void therMAILx_DiagonalStorage(void)
  * @brief use diagonal matrix
  *
  * @cond PYDOC
  * python usage : therMAILx_DiagonalStorage()
  * @endcond
  */
  extern "C" int therMAILx_DiagonalStorage(void);
 /**
  * @fn void therMAILx_SkylineStorage(void)
  * @brief use skyline matrix
  *
  * @cond PYDOC
  * python usage : therMAILx_SkylineStorage()
  * @endcond
  */
  extern "C" int therMAILx_SkylineStorage(void);
 /**
  * @fn void therMAILx_FullStorage(void)
  * @brief use full matrix
  *
  * @cond PYDOC
  * python usage : therMAILx_FullStorage()
  * @endcond
  */
  extern "C" int therMAILx_FullStorage(void);
 /**
  * @fn void therMAILx_SymmetricShape(void)
  * @brief assume matrix is symmetrical
  *
  * @cond PYDOC
  * python usage : therMAILx_SymmetricShape()
  * @endcond
  */
  extern "C" int therMAILx_SymmetricShape(void);
 /**
  * @fn void therMAILx_UnspecifiedShape(void)
  * @brief does not assume any thing on matrix shape
  *
  * @cond PYDOC
  * python usage : therMAILx_UnspecifiedShape()
  * @endcond
  */
  extern "C" int therMAILx_UnspecifiedShape(void);
   /**
  * @fn void therMAILx_GetGrad( int ivalue1, double** matrix_out, int* dim1, int* dim2)
  * @brief Get a copy of a gradient of a given body
  *
  * @cond PYDOC
  * Python usage : grad_T = therMAILx_GetGrad(ibdyty)
  * @param ibdyty (integer)          : rank of considered body
  * @return grad_T (double 2D-array) : the desired gradient
  * @endcond
  *
  * @cond CDOC
  * @param[in]  ivalue1 (int)         : id of considered body
  * @param[out] matrix_out (double**) : desired gradient
  * @param[out] dim1 (int*)           : the first dimension of matrix_out
  * @param[out] dim2 (int*)           : the second dimension of matrix_out
  * @endcond
  */
  extern "C" void therMAILx_GetGrad(int ivalue1, double** matrix_out, int* dim1, int* dim2);
   /**
  * @fn void therMAILx_GetFlux( int ivalue1, double** matrix_out, int* dim1, int* dim2)
  * @brief Get a copy of a gradient of a given body
  *
  * @cond PYDOC
  * Python usage : Flux_T = therMAILx_GetFlux(ibdyty)
  * @param ibdyty (integer)       : rank of considered body
  * @return Flux_T (double array) : the desired flux
  * @endcond
  *
  * @cond CDOC
  * @param[in]  ivalue1 (int)         : id of considered body
  * @param[out] matrix_out (double**) : the vector to get, must be of the right size
  * @param[out] dim1 (int*)           : first dimension of matrix_out
  * @param[out] dim2 (int*)           : second dimension of matrix_out
  * @endcond
  */
  extern "C" void therMAILx_GetFlux(int ivalue1, double** matrix_out, int* dim1, int* dim2);
 /**
  * @fn void therMAILx_InitializeElementaryFlux(void)
  * @brief set elementary flux to 0
  *
  * @cond PYDOC
  * python usage : therMAILx_InitializeElementaryFlux()
  * @endcond
  */
  extern "C" void therMAILx_InitializeElementaryFlux(void);
 /**
  * @fn void therMAILx_GetCoor(int idBody,  double ** matrix_out, int * dim1, int * dim2)
  * @brief return node coordinates of idBody
  *
  * @cond PYDOC
  * python usage : array = therMAILx_GetCoor(idBody)
  * @param[in] IdBody (integer)     : id of the concerned body
  * @return array (double 2D-array) : coordinates
  * @endcond
  *
  * @cond CDOC
  * @param[in]     IdBody (int)           : id of the concerned body
  * @param[in,out] matrix_out (double **) : xxx
  * @param[in]     dim1 (int *)  i        : matrix_out first dimension
  * @param[in]     dim2 (int *)           : matrix_out second dimension
  * @endcond
  */
  extern "C" void therMAILx_GetCoor(int idBody, double ** matrix_out, int * dim1, int * dim2);
 /**
  * @fn void therMAILx_GetConnectivity(int idBody,  int ** i4_vector, int * i4_size)
  * @brief return connectivity of idBody elements
  *
  * @cond PYDOC
  * python usage : vector = therMAILx_GetConnectivity(idBody)
  * @param[in] IdBody (integer) : id of the concerned body
  * @return    vector (integer)  : connectivity
  * @endcond
  *
  * @cond CDOC
  * @param[in]  IdBody (int)      : id of the concerned body
  * @param[out] i4_vector (int**) : connectivities
  * @param[out] i4_size (int *)   : size of i4_vector
  * @endcond
  */
  extern "C" void therMAILx_GetConnectivity(int idBody, int ** i4_vector, int * i4_size );
 /**
  * @fn void therMAILx_GetAll(int idBody,  double ** matrix_out, int * dim1, int * dim2)
  * @brief return mechanical data computed for idBody
  *
  * @cond PYDOC
  * python usage : array = therMAILx_GetAll(idBody)
  * @param[in] IdBody (integer)     : id of the concerned body
  * @return array (double 2D-array) : mechanical data
  * @endcond
  *
  * @cond CDOC
  * @param[in]     IdBody (int)           : id of the concerned body
  * @param[in,out] matrix_out (double **) : xxx
  * @param[in]     dim1 (int *)  i        : matrix_out first dimension
  * @param[in]     dim2 (int *)           : matrix_out second dimension
  * @endcond
  */
  extern "C" void therMAILx_GetAll(int idBody, double ** matrix_out, int * dim1, int * dim2);
 /**
  * @fn void therMAILx_GetGpCoor(int idBody,  double ** matrix_out, int * dim1, int * dim2)
  * @brief return Gauss points coordinates of idBody
  *
  * @cond PYDOC
  * python usage : array = therMAILx_GetGpCoor(idBody)
  * @param[in] IdBody (integer)     : id of the concerned body
  * @return array (double 2D-array) : coordinates of all Gauss points
  * @endcond
  *
  * @cond CDOC
  * @param[in]     IdBody (int)           : id of the concerned body
  * @param[in,out] matrix_out (double **) : coordinates of all Gauss points
  * @param[in]     dim1 (int *)  i        : matrix_out first dimension
  * @param[in]     dim2 (int *)           : matrix_out second dimension
  * @endcond
  */
  extern "C" void therMAILx_GetGpCoor(int idBody, double ** matrix_out, int * dim1, int * dim2);
 /**
  * @fn void therMAILx_GetGpField(int idBody,int idEle, int idGp, int idField, double** r8_vector, int* r8_size)
  * @brief return field values stored at a gp
  *
  * @cond PYDOC
  * python usage : field = therMAILx_GetGpField(idBody,idEle,idGp,idField)
  * @param[in] IdBody  (integer)  : id of the concerned body
  * @param[in] IdEle   (integer)  : id of the concerned element
  * @param[in] IdGp    (integer)  : id of the concerned gauss point
  * @param[in] IdField (integer)  : id of the concerned field
  * @return field (double array)  : field value
  * @endcond
  *
  * @cond CDOC
  * @param[in]  IdBody (int)         : id of the concerned body
  * @param[in]  IdEle  (int)         : id of the concerned element
  * @param[in]  IdGp   (int)         : id of the concerned gauss point 
  * @param[in]  IdField(int)         : id of the concerned gauss point 
  * @param[out] r8_vector (double**) : xxx
  * @param[out] r8_size (int*)       : dimension
  * @endcond
  */
  extern "C" void therMAILx_GetGpField(int idBody, int idEle, int idGp, int idField, double** r8_vector, int* r8_size );
 // elucider a quoi ca sert ... 

 /**
  * @fn void therMAILx_TrialAssembThermKT(void)
  * @brief [experimental]  assembles elementary matrices
  *
  * @cond PYDOC
  * python usage : therMAILx_AssembThermKT()
  * @endcond
  */
  extern "C" void therMAILx_TrialAssembThermKT(void);
 /**
  * @fn void therMAILx_TrialAssembThermRHS(void)
  * @brief [experimental]  assembles elementary vectors
  *
  * @cond PYDOC
  * python usage : therMAILx_AssembThermRHS()
  * @endcond
  */
  extern "C" void therMAILx_TrialAssembThermRHS(void);
/**
  * @fn void therMAILx_CleanMemory(void)
  * @brief Free all memory allocated within therMAILx module
  *
  * @cond PYDOC
  * python usage : therMAILx_CleanMemory()
  * @endcond
  */
  extern "C" void therMAILx_CleanMemory(void);
 /**
  * @fn void therMAILx_CheckProperties(void)
  * @brief check if model and material are matching ; set material parameter if external model
  *
  * @cond PYDOC
  * python usage : therMAILx_CheckProperties()
  * @endcond
  */
  extern "C" int therMAILx_CheckProperties(void);
 /**
  * @fn void therMAILx_GetNbGpByElem(char** string_vector, int* vector_size, int* string_size, , int** i4_vector, int* i4_size)
  * @brief Get the list of finite elements for therx models and the associated number of Gauss Points.
  *
  * Here memory is allocated within lmgc90 so that the pointer can be freely
  * modified by third parties without nasty effect on lmgc90 functioning.
  *
  * @cond PYDOC
  * python usage : names, nb_gps = therMAILx_GetNbGpByElem()
  * @return names  (string list) : list of the finite elements
            nb_gps (integer list): list of the number of Gauss Points
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : list of finite elements
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @param[out] i4_vector (int**) : reference on the integer array holding the list of number of Gauss Points
  * @param[out] i4_size (int*) : reference on the size of the array referenced by i4_vector
  * @endcond
  */
  extern "C" void therMAILx_GetNbGpByElem(char** string_vector, int* vector_size, int* string_size, int** i4_vector, int* i4_size);
 /**
  * @fn int therMAILx_GetNbGp(int ibdyty, int iblmty)
  * @brief Get the number of Gauss points of an element of a therMAILx
  *
  * @cond PYDOC
  * python usage : nb_gp = therMAILx_GetNbElements(ibdyty, iblmty)
  * @param[in] ibdyty (integer) : id of the therMAILx
  * @param[in] iblmty (integer) : id of the element
  * @return nb_gp (integer) : number of Gauss point of an element of a therMAILx
  * @endcond
  *
  * @cond CDOC
  * @return (int) number of Gauss points
  * @endcond
  */
  extern "C" int therMAILx_GetNbGp(int ibdyty, int iblmty);