src/lmgc90_dev/src/ChiPy/mailx/wrap_therMAILx.f90


    END SUBROUTINE
    !--------------------------------------------------------------------------------
    !DA : Ajout du wrap pour utiliser des termes de convection
    subroutine ComputeConvection() bind(c, name='therMAILx_ComputeConvection')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp convec ')
      call start_itimer(timer_id)

      call compute_convection_therMAILx 

      call stop_itimer(timer_id)

    end subroutine
    !--------------------------------------------------------------------------------
    !DA : Ajout du wrap pour utiliser les stockage de matrice

    SUBROUTINE WithoutRenumbering() bind(c, name='therMAILx_WithoutRenumbering')
      IMPLICIT NONE

       CALL set_without_renum_therMAILx()

    END SUBROUTINE

    SUBROUTINE BandStorage() bind(c, name='therMAILx_BandStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_therMAILx('band____')

    END SUBROUTINE

    SUBROUTINE SparseStorage() bind(c, name='therMAILx_SparseStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_therMAILx('sparse__')

    END SUBROUTINE

    SUBROUTINE ExplodedStorage() bind(c, name='therMAILx_ExplodedStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_therMAILx('exploded')

    END SUBROUTINE


    SUBROUTINE DiagonalStorage() bind(c, name='therMAILx_DiagonalStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_therMAILx('diagonal')

    END SUBROUTINE

    SUBROUTINE SkylineStorage() bind(c, name='therMAILx_SkylineStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_therMAILx('skyline_')

    END SUBROUTINE

    SUBROUTINE FullStorage() bind(c, name='therMAILx_FullStorage')
      IMPLICIT NONE

       CALL set_Matrix_Storage_therMAILx('full____')

    END SUBROUTINE

    SUBROUTINE SymmetricShape() bind(c, name='therMAILx_SymmetricShape')
      IMPLICIT NONE

       CALL set_Matrix_Shape_therMAILx('sym_____')

    END SUBROUTINE

    SUBROUTINE UnspecifiedShape() bind(c, name='therMAILx_UnspecifiedShape')
      IMPLICIT NONE

       CALL set_Matrix_Shape_therMAILx('std_____')

    END SUBROUTINE




    SUBROUTINE GetGrad(ivalue1,strain,ivalue2,ivalue3) bind(c, name='therMAILx_GetGrad')
      IMPLICIT NONE
      integer(c_int), intent(in), value :: ivalue1
      integer(c_int)                    :: ivalue2,ivalue3
      type(c_ptr)                       :: strain
      !
      real(c_double), dimension(:,:), pointer :: E

      ivalue2 = 3
      ivalue3 = get_nb_nodes_therMAILx(ivalue1)
      allocate(E(ivalue2,ivalue3))
      CALL get_NodalGrad_therMAILx(ivalue1,E)

      strain = c_loc(E(1,1))

    END SUBROUTINE
    
    SUBROUTINE GetFlux(ivalue1,strain,ivalue2,ivalue3) bind(c, name='therMAILx_GetFlux')
      IMPLICIT NONE
      integer(c_int), intent(in), value :: ivalue1
      integer(c_int)                    :: ivalue2,ivalue3
      type(c_ptr)                       :: strain
      !
      real(c_double), dimension(:,:), pointer :: E

      ivalue2 = 3
      ivalue3 = get_nb_nodes_therMAILx(ivalue1)
      allocate(E(ivalue2,ivalue3))
      CALL get_NodalFlux_therMAILx(ivalue1,E)

      strain = c_loc(E(1,1))

    END SUBROUTINE

    SUBROUTINE InitializeElementaryFlux() bind(c, name='therMAILx_InitializeElementaryFlux')
      IMPLICIT NONE

      call initialize_elementary_flux_therMAILx()

    END SUBROUTINE 

    subroutine GetCoorTherMAILx(idBody, ptr, dim1, dim2) BIND(c, name='therMAILx_GetCoor')
      implicit none

      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1, dim2

      real(kind=8), dimension(:,:), pointer :: all

      all => get_coor_therMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1,1))
        dim1 = size(all,1)
        dim2 = size(all,2)
      else
        ptr  = c_null_ptr
        dim1 = 0
        dim2 = 0
      end if

    end subroutine GetCoorTherMAILx

    subroutine GetConnectivityTherMAILx(idBody, ptr, dim1) BIND(c, name='therMAILx_GetConnectivity')
      implicit none

      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1

      integer(kind=4), dimension(:), pointer :: all

      all => get_connectivity_therMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1))
        dim1 = size(all)
      else
        ptr  = c_null_ptr
        dim1 = 0
      end if

    end subroutine GetConnectivityTherMAILx

    subroutine GetAllTherMAILx(idBody,ptr, dim1, dim2) BIND(c, name='therMAILx_GetAll')
      implicit none

      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1, dim2

      real(kind=8), dimension(:,:), pointer :: all

      all => get_All_therMAILx(idBody)

      if( associated(all) ) then
        ptr  = c_loc(all(1,1))
        dim1 = size(all,1)
        dim2 = size(all,2)
      else
        ptr  = c_null_ptr
        dim1 = 0
        dim2 = 0
      end if

    end subroutine GetAllTherMAILx

    subroutine GetGpCoor(idBody, ptr, dim1, dim2) BIND(c, name='therMAILx_GetGpCoor')
      implicit none
      integer(c_int), intent(IN), value :: IdBody
      type(c_ptr)    :: ptr
      integer(c_int) :: dim1, dim2

      real(kind=8), dimension(:,:), pointer  :: gp_coor

      gp_coor => get_gp_coor_therMAILx(idBody)

      if( associated(gp_coor) ) then
        ptr  = c_loc(gp_coor(1,1))
        dim1 = size(gp_coor,1)
        dim2 = size(gp_coor,2)
      else
        ptr  = c_null_ptr
        dim1 = 0
        dim2 = 0
      end if

    end subroutine

    subroutine GetGpField(idBody, idEle, idGp, idField, ptr, length) BIND(c, name='therMAILx_GetGpField')
      implicit none
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody,idEle,idGp,idField
      type(c_ptr)    :: ptr
      integer(c_int) :: length

      real(kind=8), dimension(:), pointer :: field

      allocate(field(3))
      field = get_gp_field_therMAILx(idBody,idEle,idGp,idField)

      ptr  = c_loc(field(1))
      length = size(field)

    end subroutine GetGpField

    ! TODO: a quoi ca sert ?
    !!! construction of the iteration matrix and the corresponding right hand side vector

    SUBROUTINE TrialAssembThermKT() bind(c, name='therMAILx_TrialAssembThermKT')
      IMPLICIT NONE

       CALL trial_assemb_KT_therMAILx

    END SUBROUTINE

    SUBROUTINE TrialAssembThermRHS() bind(c, name='therMAILx_TrialAssembThermRHS')
      IMPLICIT NONE

       CALL trial_assemb_RHS_therMAILx

    END SUBROUTINE

    !!!!
    subroutine CleanMemory() bind(c, name='therMAILx_CleanMemory')
      implicit none

      call clean_memory_therMAILx

    end subroutine

    subroutine CheckProperties() bind(c, name='therMAILx_CheckProperties')
      implicit none
      !

      if( get_nb_therMAILx() < 1 ) return

      call check_properties_therMAILx()
       
    end subroutine CheckProperties

    subroutine GetNbGpByElem(elems, esize, ssize, nbgps, nsize) bind(c, name='therMAILx_GetNbGpByElem')
      implicit none

      type(c_ptr) :: elems, nbgps
      integer(c_int) :: esize, ssize, nsize
      !
      character(len=5), dimension(:), pointer :: names
      integer(c_int)  , dimension(:), pointer :: n_GPs

      ssize = 5

      call get_nb_gp_by_elem_therMAILx(names, n_Gps, esize)

      nsize = esize
      elems = c_loc( names(1) )
      nbgps = c_loc( n_GPs(1) )
    end subroutine

    ! number of Gauss Point of an element of a therMAILx
    function GetNbGp(ibdyty, iblmty) bind(c, name='therMAILx_GetNbGp')
       implicit none
       integer(c_int),value :: ibdyty, iblmty
       ! valeur de retour
       integer(c_int) :: GetNbGp

       GetNbGp = get_nb_gp_therMAILx(ibdyty, iblmty)

    end function GetNbGp
    
      
END MODULE wrap_therMAILx
